--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OftalClinic</title>
-</head>
+    <link rel='stylesheet' href='app.css'>
+<link href="app.css" rel="stylesheet"></head>
 <body>
+    <h1>Projeto Requisito de Sistemas</h1>
     <div id="app" class='container'></div>
-    <script type="text/javascript" src="bundle.js"></script></body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
