Criação da tela de login

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='app.css'>
 </head>
 <body>
-    <h1>Projeto Requisito de Sistemas</h1>
-    <div id="app" class='container'></div>
+    <div id="app" class='container-fluid'></div>
+    <script src='bundle.js'></script>
 </body>
 </html>
