--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='app.css'>
 <link href="app.css" rel="stylesheet"></head>
 <body>
-    <h1>Projeto Requisito de Sistemas</h1>
     <div id="app" class='container'></div>
+    <script src='bundle.js'></script>
 <script type="text/javascript" src="bundle.js"></script></body>
 </html>
