--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='app.css'>
 <link href="app.css" rel="stylesheet"></head>
 <body>
-    <div id="app" class='container'></div>
+    <div id="app" class='container-fluid'></div>
     <script src='bundle.js'></script>
 <script type="text/javascript" src="bundle.js"></script></body>
 </html>
